# GameAI_Analytics

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  GameAI_Analytics_기획서.md  Makefile  README.md  alerts.yml  docker-compose.yml  dvc.yaml  locustfile.py  params.yaml  prometheus.yml  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml
.streamlit/: config.toml
dags/: retrain_dag.py
docs/: ARCHITECTURE.md  PORTFOLIO_GUIDE.md
grafana/dashboards/: gameai.json
grafana/provisioning/dashboards/: default.yml
models/: feature_names.txt
notebooks/: 01_eda_gaming_behavior.ipynb  02_eda_cookie_cats.ipynb  03_feature_engineering.ipynb  04_model_comparison.ipynb  05_ab_test_analysis.ipynb  06_business_impact.ipynb
scripts/: benchmark.py  evaluate.py  generate_synthetic.py  load_to_postgres.py  segment.py  train.py
sql/: queries.sql  schema.sql
src/: config.py
src/api/: auth_jwt.py  cache.py  dependencies.py  main.py  middleware.py  schemas.py
src/api/routes/: health.py  model_info.py  predict.py  segment.py
src/dashboard/: app.py
src/data/: database.py  loader.py  preprocessor.py  synthetic.py  validation.py
src/features/: engineer.py  selector.py  store.py
src/models/: evaluator.py  onnx_converter.py  registry.py  segmenter.py  trainer.py
src/monitoring/: drift.py  logging_config.py  metrics.py
tests/: conftest.py  test_api.py  test_auth_jwt.py  test_data_quality.py  test_drift.py  test_feature_store.py  test_features.py  test_metrics.py  test_model_regression.py  test_models.py  test_preprocessor.py  test_validation.py
