[project]
name = "gameai-analytics"
version = "0.1.0"
description = "게임 유저 행동 분석 & 이탈 예측 시스템"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "lightgbm>=4.0",
    "shap>=0.42",
    "optuna>=3.4",
    "mlflow>=2.9",
    "fastapi>=0.104",
    "uvicorn>=0.24",
    "pydantic>=2.5",
    "streamlit>=1.29",
    "plotly>=5.18",
    "psycopg2-binary>=2.9",
    "redis>=5.0",
    "python-dotenv>=1.0",
    "httpx>=0.25",
    # Observability
    "structlog>=24.1",
    "prometheus-fastapi-instrumentator>=7.0",
    # Data Validation
    "pandera>=0.18",
    # Model Serving Optimization
    "onnxruntime>=1.17",
    "skl2onnx>=1.16",
    "onnxmltools>=1.12",
    # API Security & Performance
    "slowapi>=0.1.9",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "python-multipart>=0.0.6",
    "bcrypt==4.1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.23",
    "ruff>=0.1",
    "pre-commit>=3.6",
    "locust>=2.20",
]
notebook = [
    "jupyter>=1.0",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "scipy>=1.11",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
